@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<CueCards Version="1">
+<Card Question="Sodium" Answer="133-144 mmol/L" History=""/>
+<Card Question="Potassium" Answer="3.4-5.3 mmol/L" History=""/>
+<Card Question="Chloride" Answer="94-109 mmol/L" History=""/>
+<Card Question="CO2, Total (bicarbonate)" Answer="20-32 mmol/L" History=""/>
+</CueCards>
